feat: re-org & make proconfig easier.

--- a/state/judge.yaml
+++ b/state/judge.yaml
@@ -1,24 +1,33 @@
 judge_state:
   outputs:
     context.judge_reply: '{{reply.trim()}}'
-    context.judge_prompt: '{{context.question_idx == 0 ? context.one :
-        context.question_idx == 1 ? context.two :
-        context.question_idx == 2 ? context.three :
+    context.judge_prompt: '{{context.question_idx == 0 ? context.l1 :
+        context.question_idx == 1 ? context.l2 :
+        context.question_idx == 2 ? context.l3 :
           "false"}}'
     context.is_correct: '{{String(reply.trim()) == String(true)}}'
   tasks:
   - module_config:
       need_memory: false
       output_name: reply
-      system_prompt: 'Please execute the following pseudocode and provide the result in lowercase and without any further explaination :'
-      user_prompt: '{{context.question_idx == 0 ? context.one :
-        context.question_idx == 1 ? context.two :
-        context.question_idx == 2 ? context.three :
-          "false"}}'
+      #system_prompt: 'Please execute the following pseudocode and provide the result in lowercase and without any further explaination :'
+      #user_prompt: '{{context.question_idx == 0 ? context.l1 :
+      #  context.question_idx == 1 ? context.l2 :
+      #  context.question_idx == 2 ? context.l3 :
+      #    "false"}}'
       # gpt4
       # widget_id: '1744214047475109888'
       # gpt3.5
-      widget_id: '1744214024104448000'
+      #widget_id: '1744214024104448000'
+      # code runner widget
+      widget_id: "1751859390353202447",
+      params:
+        a: "{{1}}"
+        b: "{{2}}"
+      code: '{{context.question_idx == 0 ? context.l1 :
+        context.question_idx == 1 ? context.l2 :
+        context.question_idx == 2 ? context.l3 :
+          "false"}}'
     module_type: AnyWidgetModule
     name: judge_by_gpt
   transitions:
