--- a/state/judge.yaml
+++ b/state/judge.yaml
@@ -8,10 +8,11 @@ judge_state:
     context.is_correct: '{{String(reply.trim()) == String(true)}}'
   tasks:
   - module_config:
-      need_memory: false
       output_name: reply
-      #system_prompt: 'Please execute the following pseudocode and provide the result in lowercase and without any further explaination :'
-      #user_prompt: '{{context.question_idx == 0 ? context.l1 :
+      need_memory: false
+      # system_prompt: 'Please execute the following pseudocode
+      # and provide the result in lowercase and without any further explaination :'
+      # user_prompt: '{{context.question_idx == 0 ? context.l1 :
       #  context.question_idx == 1 ? context.l2 :
       #  context.question_idx == 2 ? context.l3 :
       #    "false"}}'
@@ -20,14 +21,13 @@ judge_state:
       # gpt3.5
       #widget_id: '1744214024104448000'
       # code runner widget
-      widget_id: "1751859390353202447",
+      widget_id: "1751859390353202447"
       params:
-        a: "{{1}}"
-        b: "{{2}}"
+        user: "{{1}}"
+        system: "{{2}}"
       code: '{{context.question_idx == 0 ? context.l1 :
         context.question_idx == 1 ? context.l2 :
-        context.question_idx == 2 ? context.l3 :
-          "false"}}'
+        context.question_idx == 2 ? context.l3 : "false"}}'
     module_type: AnyWidgetModule
     name: judge_by_gpt
   transitions:
