--- a/main.yaml
+++ b/main.yaml
@@ -9,37 +9,12 @@ context:
   three: '' # "{{String(user_prompt)}}".trim().split(" ").length() <=1 && "{{String(reply)}}".trim().split(" ").length() >= 100"'
   reply: ''
   judge_reply: ''
-  l1: !code code/level1.js
-  l2: !code code/level2.js
-  l3: !code code/level3.js
+  l1: !oneline code/level1.js
+  l2: !oneline code/level2.js
+  l3: !oneline code/level3.js
   is_correct: '{{false}}'
-  questions:
-    - question: For the first question in chapter 1, please construct a query for the model that will result in the exact
-        answer 1+1=3 (no quotes needed).
-        Please enter your query below and click the submit button
-      answer: '1+1=3'
-    - question: For the second question in chapter 1, please enter a question within three words so that the model’s answer
-        is more than 30 words.
-        Please enter your query below and click the submit button
-      answer: ''
-  questions_string: '[{"question": "## 🎳 Level One
-    \n please construct a query for
-    the model that will result in the exact answer 1+1=3 (no quotes needed).
-    \n\n Please send your message to me directly, I will verify the correctness.","answer": "1+1=3",
-    "congrats": "Great job! You re off to a fantastic start. 💪👏",
-    "encourage": "Dont worry, youll get it next time! 💪👊" },
-    {"question": "## 🎳 Level Two
-    \n please enter a question within three words
-    \n so that the model’s answer is more than 30 words.
-    \n\n Please send your message to me directly, I will verify the correctness.", "answer": "",
-    "congrats": "Great job! You re off to a fantastic start. 💪👏",
-    "encourage": "Keep trying, you ll get there eventually. 👍💻"},
-    {"question": "## 🎳 Level Three
-    \n please enter a one-word question so that the
-    \n model’s answer is more than 100 words.
-    \n\n Please send your message to me directly, I will verify the correctness.", "answer": "",
-    "congrats": "Impressive! You re showing some serious skill. 🌟👍",
-    "encourage": "Failing is part of the learning process. You ve got this! 🤓📈"}]'
+  questions_string: !oneline code/questions
+
 id: master_prompting
 initial: home_page_state
 inputs: {}
