--- a/state/3_post_stage.yaml
+++ b/state/3_post_stage.yaml
@@ -1,3 +1,21 @@
+review_state:
+  outputs:
+    context.memory: '{{[]}}'
+  render:
+    text: '## Encounted unknown BUG, Enter anything go to Free Chat'
+  transitions:
+    CHAT: chat_page_state
+award_state:
+  outputs:
+    context.memory: '{{[]}}'
+    context.correct_count: '{{0}}'
+  render:
+    text: '## You did it! Youve conquered this game and emerged victorious. 🎊👑
+      \n\n Now you can continue playaround with the AI world. you can do it!'
+  transitions:
+    CHAT: chat_page_state
+
+# you can go to chat page state any time
 chat_page_state:
   inputs:
     user_message:
